--- a/src/styles/adaptedStyles/pages/loginPage.scss
+++ b/src/styles/adaptedStyles/pages/loginPage.scss
@@ -94,6 +94,10 @@
     .top-header {
       filter: invert(1) hue-rotate(180deg);
     }
+
+    .top-img {
+      background-color: black;
+    }
   }
   // #endregion
 }
